src/react/components/Project/Project.css
.wrapper {
	display: inline-block;
	padding: 8.8em var(--side-padding) 0; /* size of the gap between top of screen and first project link */
	position: relative;
}
	.anchor {
		position: absolute;
		top: 0;
		left: 0;
	}
	.header {
		display: flex;
		align-items: center;
		margin-bottom: 0.62em;
		font-size: var(--heading-size);
	}
		.title {
			/*flex: 1 0 auto;*/
			order: 1;	
		}
		.deviceSelector {
			order: 3;
			margin-left: 0.25em;
			position: relative;
			top: -0.25em; /* offset because Kandinsky font is weird */
		}
		.header::after {
			content: "";
			order: 2;
			flex: 1 0 auto;
			display: inline-block;
			height: 0.025em;
			margin-left: 0.25em;
			position: relative;
			top: -0.125em; /* offset because Kandinsky font is weird */
			background-color: var(--base-color);
		}
	.tags {}
		.tags .list {
			list-style-type: none;
		}
			.tag {
				display: inline-block;
				vertical-align: top;
				color: var(--aside-color);
			}
				.tag:not(:last-child)::after {
					content: "/";
					display: inline-block;
					margin: 0 0.62em;
				}
	.readMore {
		display: none;
		padding: 0;
		margin-top: 1em;
		color: var(--base-color);
		text-transform: lowercase;
		background-color: transparent;
	}
		.readMore::after {
			display: inline-block;
			margin-left: 0.62em;
			color: var(--accent-color);
		}
		.readMore[aria-checked="true"]::after {
			content: "(-)";
		}
		.readMore[aria-checked="false"]::after {
			content: "(+)";
		}
	.readMore:hover,
	.readMore:focus,
	.readMore:active {
		text-decoration: underline
	}
	.more {}
		.details {
			margin-top: 1.62em;
		}
			.subtitle {
				font-size: var(--subheading-size);
				margin-bottom: 0.62em;
			}
			.details .list {
				margin-left: 2.62em;
			}
				.details .item:hover {
					cursor: not-allowed;
				}
					.details .list .link[href=""]{
						color: var(--base-color);
						text-decoration: none;
						pointer-events: none;
					}
						.details .list .link[href=""]::after{
							content: "(coming soon)";
							display: inline-block;
							margin-left: 0.62em;
							color: var(--accent-color);
							font-style: italic;
							transform: scale(1);
							transition: transform .1s;
						}
						.details .item:hover .link[href=""]::after {
							font-weight: bold;
							transform: scale(1.05);	
						}



@media(max-width: 1024px){
	.wrapper {
		--toptailpadding: calc(var(--heading-size) * 1.62);
		padding-top: var(--toptailpadding);
		padding-bottom: var(--toptailpadding);
	}
	.wrapper:nth-child(even){
		background-color: rgba(255,255,255,0.025);
	}
		.anchor {
			top: calc(var(--heading-size) * -0.38);
		}
		.readMore {
			display: block;
		}
		.more {
			overflow: hidden;
			transition-property: max-height;
			transition-timing-function: var(--ease-out)
		}
		.expanded .more {
			max-height: 50vh;
			transition-duration: 1s;
		}
		.collapsed .more {
			max-height: 0;
			transition-duration: .6s;
		}
}

@media(max-width: 767px){
	.wrapper {}
		.anchor {
			top: calc((var(--heading-size) * -1.25));
		}
		.header {
			flex-wrap: wrap;
			flex-direction: column;
			align-items: flex-start;
		}
			.header::after {
				display: none;
			}
			.deviceSelector {
				margin-left: 0;
			}
}

